Accounted for duplication of effect of neighborhood variables in STEM

--- a/Bootstrapping Program.ipynb
+++ b/Bootstrapping Program.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,31 +90,33 @@
     "                neighborhood_estimates_dict[var]=estimates_dict[var]\n",
     "        if intercept:\n",
     "            neighborhood_estimates_dict['Intercept_n']=estimates_dict['Intercept_n']\n",
+    "        \n",
+    "        #create df with correlates excluding neighborhood variables\n",
     "        x= [item for item in x if item not in neighborhood_vars]\n",
     "        head=x\n",
     "        x_df=df[x]\n",
     "        if intercept:\n",
     "            head.insert(0,'Intercept')\n",
     "\n",
+    "        #remove contribution of neighborhood vars to yhat\n",
+    "        for col in neighborhood_vars:\n",
+    "            yhat-=neighbor_df[col]*estimates_dict[col]\n",
+    "        if intercept:\n",
+    "            yhat-=estimates_dict['Intercept_n']\n",
+    "\n",
     "        for i in range(n_bootstraps):\n",
     "            #assign random resids\n",
     "            bootstrap_sample['rb%s'%(i+1)] = np.random.choice(resids, n, replace=True)\n",
     "            #add boostrap resids to fitted y values\n",
-    "            bootstrap_sample['yb%s'%(i+1)]=bootstrap_sample['yhat']+bootstrap_sample['rb%s'%(i+1)]\n",
+    "            bootstrap_sample['yb%s'%(i+1)]=yhat+bootstrap_sample['rb%s'%(i+1)]\n",
     "            \n",
     "            #fit linear reg model using new y values\n",
     "            res=fit_linear_reg(y_df=bootstrap_sample['yb%s'%(i+1)]\n",
     "                ,x_df=x_df\n",
     "                ,intercept=intercept)\n",
-    "            bootstrap_estimates=pd.concat([bootstrap_estimates,(res.params.reset_index().transpose().iloc[1:])])\n",
     "\n",
-    "            yhat=res.fittedvalues\n",
-    "            for col in neighborhood_vars:\n",
-    "                yhat+=neighbor_df[col]*estimates_dict[col]\n",
-    "            if intercept:\n",
-    "                yhat+=estimates_dict['Intercept_n']\n",
-    "            \n",
-    "            resids=bootstrap_sample[y[0]]-yhat\n",
+    "            resids=res.resid\n",
+    "            bootstrap_estimates=pd.concat([bootstrap_estimates,(res.params.reset_index().transpose().iloc[1:])])\n",
     "            print(\"Bootstrap sample %s completed\"%(i+1))\n",
     "\n",
     "    else:\n",
